added the ability for users to subscribe to each other
